--- a/Vitaminok/vitaminok.html
+++ b/Vitaminok/vitaminok.html
@@ -11,14 +11,20 @@
         <h1>A-vitamin</h1>
         <p>Növekedés, szürkületi látás, a szaruhártya egészsége, fertőzéssel szembeni ellenállás.</p>
         <p>Forrásai: tejtermékek, halmájolajak, tojássárgája. A sárgarépában és zöldségfélékben található karotint a szervezet A-vitaminná alakítja.</p>
-        <a href="a vitamin.jpg" target="_blank"><img src="a vitamin.jpg" alt="A-vitamin"></a>
+        <div class="container">
+            <a href="a vitamin.jpg" target="_blank"><img src="a vitamin.jpg" alt="A-vitamin"></a>
+            <div class="overlay">A vitamin</div>
+        </div>
     </div>
     <div class="container">
         <h1>B1-vitamin</h1>
         <p>Szénhidrát anyagcsere, az idegrendszer működése.</p>
         <p>Hiánya: Vizenyősödést vagy végzetes fogyással járó beriberit okoz.</p>
         <p>Forrásai: élesztő, tojássárgája, máj, búzacsíra, borsó, bab.</p>
-        <a href="b vitamin.jpg" target="_blank"><img src="b vitamin.jpg" alt="B1-vitamin"></a>
+        <div class="container">
+            <a href="b vitamin.jpg" target="_blank"><img src="b vitamin.jpg" alt="B1-vitamin"></a>
+            <div class="overlay">B1 vitamin</div>
+        </div>
     </div>
     <div class="container">
         <h1>B2-vitamin</h1>
@@ -35,34 +41,50 @@
         <p>Vérképződés.</p>
         <p>Hiánya: Vészes vérzékenységet okoz.</p>
         <p>Forrásai: élesztő, hús, máj, vese, tej, sajt, tojás, zöldségfélék.</p>
-        <a href="b12 vitamin.jpg" target="_blank"><img src="b12 vitamin.jpg" alt="B12-vitamin"></a>
+        <div class="container">
+            <a href="b12 vitamin.jpg" target="_blank"><img src="b12 vitamin.jpg" alt="B12-vitamin"></a>
+            <div class="overlay">B12 vitamin</div>
+        </div>
     </div>
     <div class="container">
         <h1>C-vitamin</h1>
         <p>Energia termelés, anyagcserefolyamatok, fertőzéssel szembeni ellenállás.</p>
         <p>Hiánya: Skorbutot, vérzékenységet, fáradékonyságot okoz.</p>
         <p>Forrásai: paprika, citrom, zöldségek, gyümölcsök.</p>
-        <a href="c vitamin.jpg" target="_blank"><img src="c vitamin.jpg" alt="C-vitamin"></a>
+        <div class="container">
+            <a href="c vitamin.jpg" target="_blank"><img src="c vitamin.jpg" alt="C-vitamin"></a>
+            <div class="overlay">C vitamin</div>
+        </div>
+    </div>    
     <div class="container">
         <h1>D-vitamin</h1>
         <p>Csontok egészséges fejlődése.</p>
         <p>Hiánya: A csontok görbülését, törékenységét, csontlágyulást okoz.</p>
         <p>Forrásai: vaj, halmájolaj. A növényi olajokban található előanyagot a szervezet alakítja D-vitaminná napsugárzás hatására.</p>
-        <a href="D-vitamin.jpg" target="_blank"><img src="D-vitamin.jpg" alt="D-vitamin"></a>
+        <div class="container">
+            <a href="D-vitamin.jpg" target="_blank"><img src="D-vitamin.jpg" alt="D-vitamin"></a>
+            <div class="overlay">D vitamin</div>
+        </div>
     </div>
     <div class="container">
         <h1>E-vitamin</h1>
         <p>Az idegrendszer, az izomzat és a here normális működéséhez illetve a terhesség kihordásához fontos.</p>
         <p>Hiánya: Nem jellemző.</p>
         <p>Forrásai: növényi magvak és olajok, saláták, zöldfőzelékek, tej, vaj.</p>
-        <a href="e-vitamin.jpg" target="_blank"><img src="e-vitamin.jpg" alt="E-vitamin"></a>
+        <div class="container">
+            <a href="e-vitamin.jpg" target="_blank"><img src="e-vitamin.jpg" alt="E-vitamin"></a>
+            <div class="overlay">E vitamin</div>
+        </div>
     </div>
     <div class="container">
         <h1>K-vitamin</h1>
         <p>Megfelelő májműködés.</p>
         <p>Hiánya: Nem jellemző.</p>
         <p>Forrásai: Bélbaktériumok termelik, külső bevitele általában nem szükséges.</p>
-        <a href="k vitamin.jpg" target="_blank"><img src="k vitamin.jpg" alt="K-vitamin"></a>
+        <div class="container">
+            <a href="k vitamin.jpg" target="_blank"><img src="k vitamin.jpg" alt="K-vitamin"></a>
+            <div class="overlay">K vitamin</div>
+        </div>
     </div>
 </body>
 </html>
